2007-09-11   Lucas Rocha <lucasr@gnome.org>

	* docbook/C/rndevelopers.xml: fixed a typo. Patch from 
	Milo Casagrande <milo_casagrande@yahoo.it>.

2007-09-11  Gintautas Miliauskas  <gintas@akl.lt>

	* docbook/lt/lt.po: Updated Lithuanian translation.

2007-09-10  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rnusers.xml: Corrections to the accessibility section 
	from Willie Walker.

2007-09-10  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rnusers.xml: Added the accessibility section.

2007-09-10   Lucas Rocha <lucasr@gnome.org>

	* docbook/C/rninstallation.xml, docbook/C/rndevelopers.xml: fixed two
	typos. Patch from Milo Casagrande <milo_casagrande@yahoo.it>.

2007-09-08   Clytie Siddall <clytie@riverland.net.au>

	* docbook/vi/vi.po: Updated Vietnamese translation.

2007-09-06  Daniel Nylander <po@danielnylander.se>

	* docbook/sv/figures/*png: Added/updated screenshots.

2007-09-05  Daniel Nylander <po@danielnylander.se>

	* docbook/sv/sv.po: Updated Swedish translation.
	* docbook/sv/figures/*png: Added screenshots.

2007-09-05  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation

2007-09-05  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: Use the makefile improvement from 
	Peter Newton in svn revision 4787, to avoid breaking the build 
	with an error when a translator forgets to create a figures 
	directory.

2007-09-05  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: Removed the images/ stuff. There is no such 
	directory.
	* docbook/C/rninstallation.xml: Removed the meta-packages from 
	the list.

2007-09-05  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rnusers.xml: Remove the screenshot TODO improvement 
	text from the gedit section. We obviously will not get around to 
	doing that.
	eog: Mention new changed image collection pane buttons.
	* docbook/C/figures: Updated the eog screenshot, for the changed UI.
	Added an epiphany screenshot from Reinout, and used it in the 
	markup.
