@@ -79,7 +79,7 @@
 			but keep them uncommented until near the release date, 
 			so that we have translations of the languages if needed.
 			-->
-			<para>The Release Notes are available in several languages:
+			<para>These &gnomeversion; release notes are available in several languages:
 				<ulink url="../bg/">Bulgarian</ulink>, 
 				<ulink url="../ca/">Catalan</ulink>,
         <ulink url="../zh_CN/">Chinese (Simplified)</ulink>,
@@ -124,7 +124,7 @@
 		<!-- Installing GNOME -->
 		<xi:include href="rninstallation.xml" />
 		<!-- Known Issues -->
-		<!-- Looking to GNOME 2.16 and Beyond -->
+		<!-- Looking to the future: -->
 		<xi:include href="rnlookingforward.xml" />
 
 
