@@ -73,7 +73,7 @@
       <itemizedlist>
         <listitem>Support for specifying multiple preferred languages.</listitem>
         <listitem>Vertical text shaping that uses vertical variants of punctuation marks.</listitem>
-        <listitem>New pango_cairo functions, allowing simpler use of Pango with Cairo.</listitem>
+        <listitem>New pango_cairo functions, allowing simpler use of Pango with <ulink url="http://cairographics.org/">Cairo</ulink>.</listitem>
       </itemizedlist>
     </sect2>
 
