@@ -115,7 +115,7 @@
 
     <sect2 id="rnusers-evince">
       <title>Document Viewer</title>
-			<para>GNOME's Evince viewer, for PDF and Postscript files now supports interactive PDF forms, allowing you to enter information into a PDF that you receive, and page rendering is now noticeably faster.</para>
+			<para>GNOME's Evince viewer, for PDF and Postscript files now supports interactive PDF forms, allowing you to enter information into a PDF that you receive, to save or print. Page rendering is the new version is now noticeably faster.</para>
 			
 			<figure>
 				<title>The Document Viewer, editing a form.</title>
@@ -131,7 +131,7 @@
 
     <sect2 id="rnusers-sound-and-video">
       <title>Sound and Video</title>
-			<para>Not all distributions like to install all multimedia codecs by default, due to the need to obtain patent licenses for some codecs in some countries. This means that applications can not always read every file format by default. But applications such as GNOME's video player, Totem, can now offer these new codecs to the user for installation. This is actually implemented by your distribution, which may make its own decisions about how to obtain the codecs. Here's how it looks in Ubuntu Linux:</para>
+			<para>Not all distributions like to install all multimedia codecs by default, due to the need to obtain patent licenses for some codecs in some countries. This means that applications can not always read every file format by default. But applications such as GNOME's video player, Totem, can now offer these new codecs to the user for installation. This is actually implemented by your distribution, which may make its own decisions about how to obtain the codecs. Here's how it looks in Ubuntu:</para>
 
 			<figure>
 				<title>The video player offering download of a codec.</title>
