@@ -1,3 +1,11 @@
+2007-09-12  Murray Cumming  <murrayc@murrayc.com>
+
+	* docbook/C/release-notes.xml:
+	* docbook/C/rnadmins.xml:
+	* docbook/C/rndevelopers.xml:
+	* docbook/C/rnusers.xml: Some minor changes suggested by 
+	Behdad on the marketing-list.
+
 2007-09-11   Lucas Rocha <lucasr@gnome.org>
 
 	* docbook/C/rndevelopers.xml: fixed a typo. Patch from 
